--- a/Data Structures/lists.ipynb
+++ b/Data Structures/lists.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['drive', 'chrome', 'swiggy', 'zomato', 'instagram', 'linkedin', 'snapchat', 'uber', 'rapido', 'chalo', 'facebook', 'swiggy', 'swiggy', 'swiggy']\n"
+      "['drive', 'chrome', 'swiggy', 'zomato', 'instagram', 'linkedin', 'snapchat', 'uber', 'rapido', 'chalo', 'Facebook']\n"
      ]
     }
    ],
@@ -95,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['drive', 'chrome', 'gmail', 'swiggy', 'zomato', 'instagram', 'linkedin', 'snapchat', 'uber', 'rapido', 'chalo', 'facebook', 'swiggy', 'swiggy', 'swiggy']\n"
+      "['drive', 'chrome', 'gmail', 'swiggy', 'zomato', 'instagram', 'linkedin', 'snapchat', 'uber', 'rapido', 'chalo', 'Facebook']\n"
      ]
     }
    ],
@@ -131,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['drive', 'chrome', 'gmail', 'swiggy', 'zomato', 'instagram', 'linkedin', 'rapido', 'facebook', 'swiggy', 'swiggy', 'swiggy']\n"
+      "['drive', 'chrome', 'gmail', 'swiggy', 'zomato', 'instagram', 'linkedin', 'snapchat', 'uber', 'rapido', 'Facebook']\n"
      ]
     }
    ],
@@ -149,25 +149,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['drive', 'chrome', 'gmail', 'swiggy', 'zomato', 'instagram', 'linkedin', 'snapchat', 'uber', 'rapido', 'Facebook']\n"
      ]
     }
    ],
    "source": [
-    "a.copy()\n",
-    "print(apps)"
+    "a= apps.copy()\n",
+    "print (a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -185,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['chrome', 'drive', 'facebook', 'gmail', 'instagram', 'linkedin', 'rapido', 'swiggy', 'swiggy', 'swiggy', 'swiggy', 'zomato']\n"
+      "['Facebook', 'chrome', 'drive', 'gmail', 'instagram', 'linkedin', 'rapido', 'snapchat', 'swiggy', 'uber', 'zomato']\n"
      ]
     }
    ],
