--- a/condition.ipynb
+++ b/condition.ipynb
@@ -180,15 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Palindrome\n",
-      "Not a Palindrome\n"
+      "Palindrome\n"
      ]
     }
    ],
@@ -200,7 +199,7 @@
     " rem=n%10\n",
     " rev=(rev*10)+rem\n",
     " n//=10\n",
-    " if(rev==temp):\n",
+    "if(rev==temp):\n",
     "    print(\"Palindrome\")\n",
     "else:\n",
     "    print (\"Not a Palindrome\")    "
