--- a/Analysis/numpy.ipynb
+++ b/Analysis/numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,491 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n",
+      "[5 4 3 7 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3,4,5])\n",
+    "b=  np.array([5,4,3,7,1])\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6  6  6 11  6]\n",
+      "[ 5  8  9 28  5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a+b)\n",
+    "print(a*b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[1,2],[3,4]])\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(10)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18,\n",
+       "       19, 20])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(2,21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  4,  6,  8, 10, 12, 14, 16, 18, 20])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(2,21,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[37, 14, 11, 19, 20],\n",
+       "       [25, 35, 13, 15, 37],\n",
+       "       [22, 13, 18, 34, 20]], dtype=int32)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(10,40, size=(3,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 2 3]\n",
+      " [2 5 2]\n",
+      " [3 5 1]]\n",
+      "[[1 8 3]\n",
+      " [3 7 2]\n",
+      " [2 5 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[7,2,3],\n",
+    "            [2,5,2],\n",
+    "            [3,5,1]])\n",
+    "\n",
+    "y=np.array([[1,8,3],\n",
+    "          [3,7,2],\n",
+    "          [2,5,3]])\n",
+    "print(x)\n",
+    "print(y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 7 16  9]\n",
+      " [ 6 35  4]\n",
+      " [ 6 25  3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x*y) #normal multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[19 85 34]\n",
+      " [21 61 22]\n",
+      " [20 64 22]]\n",
+      "[[19 85 34]\n",
+      " [21 61 22]\n",
+      " [20 64 22]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x@y)       #matrix multiplication\n",
+    "print(x.dot(y))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(12600)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.prod() #product of all element "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(30)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.sum() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(3.3333333333333335)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4., 4., 2.])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.mean(axis =0) #mean of each column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4., 3., 3.])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.mean(axis=1) #mean of each row "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3333333333333335\n",
+      "1.8257418583505538\n",
+      "1\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.var()) #variance of all element \n",
+    "print(x.std()) #standard deviation of all element\n",
+    "print(x.min()) #minimum of all element \n",
+    "print(x.max()) #maximum of all element "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "5.0\n",
+      "7.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "z= np.array([1,2,3,4,5,6,7,8,9])  #median of all element\n",
+    "print(np.percentile(z,25)) #25th percentile\n",
+    "print(np.percentile(z,50)) #50th percentile\n",
+    "print(np.percentile(z,75)) #75th percentile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[16 44 46 49]\n",
+      " [10 22 41 35]\n",
+      " [11 35 20 12]\n",
+      " [46 33 41 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[16,44,46,49],[10,22,41,35],[11,35,20,12],[46,33,41,36]])\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8x2\n",
+      "[[16 44]\n",
+      " [46 49]\n",
+      " [10 22]\n",
+      " [41 35]\n",
+      " [11 35]\n",
+      " [20 12]\n",
+      " [46 33]\n",
+      " [41 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('8x2')\n",
+    "print(arr.reshape(8,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2x8\n",
+      "[[16 44 46 49 10 22 41 35]\n",
+      " [11 35 20 12 46 33 41 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('2x8')\n",
+    "print(arr.reshape(2,8))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a ="
-   ]
+   "source": []
   }
  ],
  "metadata": {
