--- a/Practise Sets/Practise2.ipynb
+++ b/Practise Sets/Practise2.ipynb
@@ -9,60 +9,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "212.0\n"
+      "413.6\n"
      ]
     }
    ],
    "source": [
-    "a=int(input(\"Enter the temperaure in celsius\"))\n",
-    "b =9/5*a +32\n",
+    "a=int(input(\"Enter the temperature in celsius\"))\n",
+    "b= a*(9/5)+32\n",
     "print(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "B  is maximum\n"
+      "19 is maximum\n"
      ]
     }
    ],
    "source": [
-    "a=int(input(\"Enter The  first number\"))\n",
-    "b=int(input(\"Enter The  second  number\"))\n",
-    "c=int(input(\"Enter The  third number\"))\n",
-    "if (a>b and a>c):\n",
-    "    print(\"A is maxiumum\")\n",
+    "a=int(input(\"Enter the first number\"))\n",
+    "b=int(input(\"Enter the first number\"))\n",
+    "c=int(input(\"Enter the first number\"))\n",
+    "if(a>b and a>c):\n",
+    "    print(f'{a} is maximum')\n",
     "elif(b>c and b>a):\n",
-    "    print(\"B  is maximum\") \n",
+    "    print(f'{b} is maximumn')\n",
     "elif(c>a and c>b):\n",
-    "    print( \"C  is maximum\")       "
+    "    print(f'{c} is maximum')    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.001735891932836763\n"
+      "factorial of 19 is 121645100408832000\n"
      ]
     }
    ],
    "source": [
-    "a=int(input(\"Enter weight of the body\"))\n",
-    "b=int(input(\"Enter the height of the body\"))\n",
-    "c=a/b**2\n",
-    "print(c)"
+    "a=int(input(\"Enter the number\"))\n",
+    "factorial=1\n",
+    "for i in range(1,a+1):\n",
+    "    factorial*=i\n",
+    "print(f'factorial of {a} is {factorial}')     "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
