--- a/Practise Sets/Practise2.ipynb
+++ b/Practise Sets/Practise2.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,12 +76,17 @@
        "int"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "type(a)\n",
+    "type(b)\n",
+    "type(c)\n",
+    "type(factorial)\n"
+   ]
   }
  ],
  "metadata": {
