--- a/visualization/visualization.ipynb
+++ b/visualization/visualization.ipynb
@@ -8,6 +8,36 @@
    "source": [
     "import matplotlib as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creating a Figure and Axes\n",
+    "fig, ax=plt.subplots()\n",
+    "#setting the background color\n",
+    "fig.set_facecolor('grey')\n",
+    "ax.set_facecolor('yellow')\n",
+    "#plotting the data\n",
+    "x = [1,2,3,4,5,6,7,8,9,10]\n",
+    "y=[23,56,67,34,12,56,23,67,89,12]\n",
+    "ax.plot(x,y, \n",
+    "        marker = 'o',\n",
+    "        markersize = 5,\n",
+    "        linenstyle = ':',\n",
+    "        color='red', \n",
+    "        linewidth=2,\n",
+    "        markerfacecolor='blue',\n",
+    "        markeredgecolor='black',\n",
+    "        alpha = 0.8,)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
