--- a/Data Structures/lists.ipynb
+++ b/Data Structures/lists.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,25 +77,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['drive', 'chrome', 'swiggy', 'zomato', 'instagram', 'linkedin', 'snapchat', 'uber', 'rapido', 'chalo', 'Facebook']\n"
+      "['Facebook', 'chrome', 'drive', 'gmail', 'instagram', 'linkedin', 'rapido', 'swiggy', 'uber', 'zomato', 'whatsapp', 'snapchat', 'facebook', 'facebook', 'facebook']\n"
      ]
     }
    ],
    "source": [
-    "apps.append('Facebook')#append\n",
+    "apps.append('facebook')#append\n",
     "print(apps)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -113,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['drive', 'chrome', 'gmail', 'swiggy', 'zomato', 'instagram', 'linkedin', 'rapido', 'chalo', 'facebook', 'swiggy', 'swiggy', 'swiggy']\n"
+      "['drive', 'chrome', 'gmail', 'swiggy', 'zomato', 'instagram', 'linkedin', 'uber', 'rapido', 'chalo', 'Facebook']\n"
      ]
     }
    ],
@@ -131,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['drive', 'chrome', 'gmail', 'swiggy', 'zomato', 'instagram', 'linkedin', 'snapchat', 'uber', 'rapido', 'Facebook']\n"
+      "['drive', 'chrome', 'gmail', 'swiggy', 'zomato', 'instagram', 'linkedin', 'uber', 'rapido', 'Facebook']\n"
      ]
     }
    ],
@@ -149,14 +149,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['drive', 'chrome', 'gmail', 'swiggy', 'zomato', 'instagram', 'linkedin', 'snapchat', 'uber', 'rapido', 'Facebook']\n"
+      "['chrome', 'drive', 'facebook', 'gmail', 'instagram', 'linkedin', 'rapido', 'snapchat', 'swiggy', 'uber', 'whatsapp', 'zomato']\n"
+     ]
+    }
+   ],
+   "source": [
+    "apps.remove(\"facebook\")\n",
+    "print(apps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['drive', 'chrome', 'gmail', 'swiggy', 'zomato', 'instagram', 'linkedin', 'uber', 'rapido', 'Facebook']\n"
      ]
     }
    ],
@@ -167,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -185,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Facebook', 'chrome', 'drive', 'gmail', 'instagram', 'linkedin', 'rapido', 'snapchat', 'swiggy', 'uber', 'zomato']\n"
+      "['chrome', 'drive', 'facebook', 'gmail', 'instagram', 'linkedin', 'rapido', 'snapchat', 'swiggy', 'uber', 'whatsapp', 'zomato']\n"
      ]
     }
    ],
@@ -203,14 +221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['chrome', 'drive', 'facebook', 'gmail', 'instagram', 'linkedin', 'rapido', 'swiggy', 'swiggy', 'swiggy', 'swiggy', 'zomato', 'whatsapp', 'snapchat']\n"
+      "['chrome', 'drive', 'facebook', 'gmail', 'instagram', 'linkedin', 'rapido', 'snapchat', 'swiggy', 'uber', 'whatsapp', 'zomato', 'whatsapp', 'snapchat']\n"
      ]
     }
    ],
@@ -222,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['whatsapp', 'snapchat', 'chrome', 'drive', 'facebook', 'gmail', 'instagram', 'linkedin', 'rapido', 'swiggy', 'swiggy', 'swiggy', 'swiggy', 'zomato', 'whatsapp', 'snapchat', 'chrome', 'drive', 'facebook', 'gmail', 'instagram', 'linkedin', 'rapido', 'swiggy', 'swiggy', 'swiggy', 'swiggy', 'zomato', 'whatsapp', 'snapchat']\n"
+      "['whatsapp', 'snapchat', 'Facebook', 'chrome', 'drive', 'gmail', 'instagram', 'linkedin', 'rapido', 'swiggy', 'uber', 'zomato', 'whatsapp', 'snapchat']\n"
      ]
     }
    ],
