--- a/Data Structures/strings.ipynb
+++ b/Data Structures/strings.ipynb
@@ -249,22 +249,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'poem' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m p\u001b[38;5;241m=\u001b[39m\u001b[43mpoem\u001b[49m\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpapa\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmama\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msugar\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msalt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJohny\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAlex\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(p)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'poem' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alex Alex yes mama\n",
+      "eating salt no mama\n",
+      "telling lie no mama\n",
+      "open your mouth ha ha ha  \n"
      ]
     }
    ],
    "source": [
+    "poem='''Johny Johny yes papa\n",
+    "eating sugar no papa\n",
+    "telling lie no papa\n",
+    "open your mouth ha ha ha  '''\n",
     "p=poem.replace(\"papa\",\"mama\").replace(\"sugar\",\"salt\").replace(\"Johny\",\"Alex\")\n",
     "print(p)"
    ]
