--- a/Data Structures/dictionary.ipynb
+++ b/Data Structures/dictionary.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'John', 'age': 25, 'course': 'Python', 'marks': 78}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "student = {\n",
     "    \"name\": \"John\",\n",
@@ -25,17 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'John', 'age': 25, 'course': 'Python', 'marks': 78}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "info =dict(name = \"John\", age = 25, course =  \"Python\", marks = 78)\n",
     "print(info)"
@@ -43,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Avirat', 'age': 20, 'course': 'Python', 'marks': 69}\n"
+      "{'name': 'Avirat', 'age': 20, 'course': 'Python', 'marks': 78}\n"
      ]
     }
    ],
@@ -61,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -208,33 +192,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'emp001': {'name': 'Vaibhav', 'age': 20, 'dept': 'IT', 'salary': 25000}, 'emp002': {'name': 'Arpit', 'age': 20, 'dept': 'IT', 'salary': 26000}, 'emp003': {'name': 'Haider', 'age': 20, 'dept': 'IT', 'salary': 26000}}\n"
+      "{'emp001': {'name': 'Varun', 'age': 20, 'dept': 'IT', 'salary': 25000}, 'emp002': {'name': 'Arnav', 'age': 20, 'dept': 'IT', 'salary': 26000}, 'emp003': {'name': 'Honey', 'age': 20, 'dept': 'IT', 'salary': 26000}}\n"
      ]
     }
    ],
    "source": [
     "company={\n",
     "    'emp001':{\n",
-    "        'name': 'Vaibhav',\n",
+    "        'name': 'Varun',\n",
     "        'age':20,\n",
     "        'dept':'IT',\n",
     "        'salary':25000\n",
     "    },\n",
     "    'emp002':{\n",
-    "        'name':\"Arpit\",\n",
+    "        'name':\"Arnav\",\n",
     "        'age':20,\n",
     "        'dept':'IT',\n",
     "        'salary':26000\n",
     "    },\n",
     "    'emp003':{\n",
-    "        'name':\"Haider\",\n",
+    "        'name':\"Honey\",\n",
     "        'age':20,\n",
     "        'dept':'IT',\n",
     "        'salary':26000\n",
@@ -246,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,16 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'emp001': {'age': 20, 'dept': 'IT', 'name': 'Vaibhav', 'salary': 25000},\n",
-      " 'emp002': {'age': 20, 'dept': 'IT', 'name': 'Arpit', 'salary': 26000},\n",
-      " 'emp003': {'age': 20, 'dept': 'IT', 'name': 'Haider', 'salary': 26000}}\n"
+      "{'emp001': {'age': 20, 'dept': 'IT', 'name': 'Varun', 'salary': 25000},\n",
+      " 'emp002': {'age': 20, 'dept': 'IT', 'name': 'Arnav', 'salary': 26000},\n",
+      " 'emp003': {'age': 20, 'dept': 'IT', 'name': 'Honey', 'salary': 26000}}\n"
      ]
     }
    ],
@@ -274,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -291,18 +275,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'temp' is not defined",
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28msum\u001b[39m(\u001b[43mtemp\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlucknow\u001b[39m\u001b[38;5;124m'\u001b[39m])\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mlen\u001b[39m(temp[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlucknow\u001b[39m\u001b[38;5;124m'\u001b[39m]))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'temp' is not defined"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtemp\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlucknow\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mlen\u001b[39m(temp[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlucknow\u001b[39m\u001b[38;5;124m'\u001b[39m]))\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not callable"
      ]
     }
    ],
