--- a/datatypes.ipynb
+++ b/datatypes.ipynb
@@ -41,23 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "41\n"
+      "12\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "int"
+       "str"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,8 +65,17 @@
    "source": [
     "a=int(input(\"Enter a number: \"))\n",
     "print(a)\n",
-    "type(a)\n"
+    "type(a)\n",
+    "b=str(a)\n",
+    "type(b)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
