--- a/libraries.ipynb
+++ b/libraries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,32 +47,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get a random number between 0 and 1: 0.002080571752583582\n",
-      "get a random number between 1 and 100: 29\n",
-      "get a random number from a list: 5\n",
-      "Shuffle a list ['John', 'Jack', 'Jane', 'Jill']\n"
+      "0.3044009857737776\n",
+      "16\n"
      ]
     }
    ],
    "source": [
-    "print(\"get a random number between 0 and 1:\",random())\n",
-    "print(\"get a random number between 1 and 100:\",randint(20,30))\n",
-    "print(\"get a random number from a list:\",choice([1,2,3,4,5]))\n",
-    "names=[\"John\",\"Jane\",\"Jack\",\"Jill\"]\n",
-    "shuffle(names)\n",
-    "print(\"Shuffle a list\",names)"
+    "import random\n",
+    "print(random.random())\n",
+    "print(random.randint(10,20))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "[9, 10, 3, 2, 7, 8, 6, 4, 5, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "a=[1,2,3,4,5,6,7,8,9,10]\n",
+    "print(random.shuffle(a))\n",
+    "print(a)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Year and Time: 2025-03-06 17:10:42.873851\n"
+      "Current Year and Time: 2025-05-01 01:48:00.591809\n"
      ]
     }
    ],
@@ -98,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -123,11 +141,11 @@
      "output_type": "stream",
      "text": [
       "Current Year 2025\n",
-      "Current Month 3\n",
-      "Current day: 6\n",
-      "Current hour: 17\n",
-      "Current minute: 10\n",
-      "Current second: 42\n"
+      "Current Month 5\n",
+      "Current day: 1\n",
+      "Current hour: 1\n",
+      "Current minute: 48\n",
+      "Current second: 0\n"
      ]
     }
    ],
@@ -142,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +168,7 @@
      "output_type": "stream",
      "text": [
       "Current day name: Thursday\n",
-      "Current month name: March\n",
+      "Current month name: May\n",
       "Current year name: Thu\n"
      ]
     }
@@ -163,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -189,15 +207,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "files in current directory: ['.git', 'condition.ipynb', 'Data Structures', 'datatypes.ipynb', 'functions.ipynb', 'libraries.ipynb', 'loops.ipynb', 'operators.ipynb', 'practise session.ipynb']\n",
-      "9 files found\n"
+      "files in current directory: ['.git', 'Analysis', 'condition.ipynb', 'Data Structures', 'datatypes.ipynb', 'functions.ipynb', 'libraries.ipynb', 'loops.ipynb', 'operators.ipynb', 'Practise Sets', 'visualization']\n",
+      "11 files found\n"
      ]
     }
    ],
@@ -209,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +235,7 @@
      "evalue": "invalid syntax. Perhaps you forgot a comma? (1911494893.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    files=os.listdir(r\"C:\"C:\\Users\\Avirat Pal\\Downloads\\Adobe Photoshop CC 2015 (20150529.r.88) (32+64Bit) + Crack\"]\")\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[37], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    files=os.listdir(r\"C:\"C:\\Users\\Avirat Pal\\Downloads\\Adobe Photoshop CC 2015 (20150529.r.88) (32+64Bit) + Crack\"]\")\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
      ]
     }
    ],
@@ -228,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
